@@ -1,3 +1,8 @@
+2013-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/58864
+	* g++.dg/opt/pr58864.C: New test.
+
 2013-12-02  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/59358
